@@ -401,6 +401,7 @@ def set_res():
 
 def set_language_properly(prev_lang):
     if g.language == prev_lang: return
+    g.load_bases()
     g.load_base_defs(g.language)
     g.load_tech_defs(g.language)
     g.load_item_defs(g.language)
